--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "metalsmith": "~0.8.0",
     "metalsmith-markdown": "~0.2.1",
     "metalsmith-templates": "~0.5.1",
-    "handlebars": "~2.0.0-alpha.4"
+    "handlebars": "~2.0.0-alpha.4",
+    "metalsmith-collections": "~0.4.1",
+    "metalsmith-permalinks": "~0.3.2"
   }
 }
