--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "metalsmith-templates": "~0.5.1",
     "handlebars": "~2.0.0-alpha.4",
     "metalsmith-collections": "~0.4.1",
-    "metalsmith-permalinks": "~0.3.2"
+    "metalsmith-permalinks": "~0.3.2",
+    "gulp": "~3.8.2",
+    "gulp-livereload": "~2.1.0"
   }
 }
