--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "metalsmith-collections": "~0.4.1",
     "metalsmith-permalinks": "~0.3.2",
     "gulp": "~3.8.2",
-    "gulp-livereload": "~2.1.0"
+    "gulp-livereload": "~2.1.0",
+    "gulp-util": "~2.2.20",
+    "gulp-clean": "~0.3.1",
+    "gulp-concat": "~2.3.3",
+    "gulp-flatten": "0.0.2",
+    "gulp-minify-css": "~0.3.6",
+    "gulp-connect": "~2.0.6",
+    "gulp-watch": "~0.6.8"
   }
 }
