--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "devDependencies": {
     "metalsmith": "~0.8.0",
     "metalsmith-markdown": "~0.2.1",
-    "metalsmith-templates": "~0.5.1",
+    "metalsmith-templates": "~0.5.2",
     "handlebars": "~2.0.0-alpha.4",
     "metalsmith-collections": "~0.4.1",
     "metalsmith-permalinks": "~0.3.2",
@@ -18,6 +18,10 @@
     "gulp-flatten": "0.0.2",
     "gulp-minify-css": "~0.3.6",
     "gulp-connect": "~2.0.6",
-    "gulp-watch": "~0.6.8"
+    "gulp-watch": "~0.6.8",
+    "gulpsmith": "~0.4.2",
+    "gulp-front-matter": "~1.0.0",
+    "gulp-debug": "~0.3.0",
+    "lodash.assign": "~2.4.1"
   }
 }
