--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-debug": "~0.3.0",
     "lodash.assign": "~2.4.1",
     "buildbranch": "0.0.1",
-    "gulp-gh-pages": "~0.3.3"
+    "gulp-gh-pages": "~0.3.3",
+    "gulp-replace": "~0.4.0"
   }
 }
