--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "tests"
   ],
   "devDependencies": {
-    "bootstrap-css": "~3.1.1"
+    "bootstrap-css": "~3.1.1",
+    "jquery": "~2.1.1"
   }
 }
